# tfg-vperez

./: README.md
doc/: UML.uxf  arquitecturaSW.dia
latex/: bibliografia.bib  estilo.tex  memoria.tex
latex/Memoria/: Makefile  README.md  anexos.tex  bibliografia.bib  estilo.tex  memoria.tex  notas.txt
latex/Memoria/capitulos/: anexoi.tex  anexoii.tex  capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex  capitulo6.tex  capitulo7.tex  tmp
latex/Memoria/portada/: .contraportada.tex.kate-swp  (+7 more)
latex/Presentacion/: Makefile  README.md  licencia.tex  slides.tex
latex/capitulos/: capitulo1.tex  capitulo1.tex.bak  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex  capitulo5.tex.bak  capitulo6.tex  capitulo6.tex.bak  capitulo7.tex  tmp
latex/figs/: pinza_evol.xcf
latex/portada/: acronimos.tex  agradecimientos.tex  indice.tex  licencia.tex  portada.tex  resumen.tex
log/: latest_list
src/ackermann-PathFinder/: algorithm.py  utils.py
src/design/: ManipuladorPrototipo.FCStd  MaxTorqueMotorCalculator.py  PinzaDemoMemoria.FCStd  PinzaDemoMemoria.FCStd1
src/g_arm_description/: CMakeLists.txt
src/grblTests/: grblAPI.py  grblBackupConfig.txt  joint.py  precisionTest_gcode.py  robot.py  testMoveOneAxis.py  testing_grblAPI.py  testing_grblConfigLoad.py
src/manipulator_design/: ManipuladorAlámbrico.FCStd  MaxTorque.py  arm.urdf
src/move_test/install/move_test/share/move_test/: package.xml
src/printables/: BaseEndStop.stl  BodyPulleys.stl  ElectromagnetTool.stl  EndEffector.stl  TolerancesTest.stl
src/software/: Grbl_config.txt
(+214 files in other folders)
