<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="v.perezb.2019@alumnos.urjc.es">vidi</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>car_demo</exec_depend>
  <exec_depend>prius_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>rclpy</depend>
  </export>
</package>
